License now not *.md, footer link fixed, added .post css style, text in form elements now no-wrap, update sitemaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ button, input, textarea, select, option {
     padding: 2px 4px;
     font-size: 16px;
     line-height: 1.382em;
+    white-space: nowrap;
 }
 
     option:hover {
@@ -290,6 +291,15 @@ legend {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
     }
+}
+
+.post {
+    margin: 0 auto;
+}
+
+.post__header {
+    text-align: center;
+    margin-block-end: 32px;
 }
 
 /* --------------- */
